infra/k8s/base/customer-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-web
  namespace: ecom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-web
  template:
    metadata:
      labels:
        app: customer-web
    spec:
      containers:
        - name: customer-web
          image: ghcr.io/shubhamyadav8901/customer-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: customer-web
  namespace: ecom
spec:
  selector:
    app: customer-web
  ports:
    - name: http
      port: 80
      targetPort: 80
